<resources>
    <string name="app_name">Rewear</string>
    <string name="title_home">Home</string>
    <string name="title_reform">Reform</string>
    <string name="title_my">My</string>
    <string name="add_item">Add new item</string>
    <string name="scroll">Scroll it</string>
    <string name="title_clothes_list">Find Your Next Favorite</string>
    <string name="back">Back to the Home Screen</string>
    <string name="search">Search for an address</string>
    <string name="use_current_location">Use current location</string>
    <string name="clear">Clear</string>
    <string name="search_item">Search for items</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="categories">Categories</string>
    <string name="tops">Tops</string>
    <string name="outer">Outer</string>
    <string name="bottoms">Bottoms</string>
    <string name="dresses">Dresses</string>
    <string name="skirts">Skirts</string>
    <string name="notifications">Notifications</string>
    <string name="title">Title</string>
    <string name="required">*</string>
    <string name="category">Category</string>
    <string name="knit">Tops-knit</string>
    <string name="sweatshirt">Tops-sweatshirt</string>
    <string name="shirt">Tops-shirt</string>
    <string name="zip_up_hoodie">Outer-zip-up hoodie</string>
    <string name="puffer_jacket">Outer-Puffer jacket</string>
    <string name="jacket">Outer-jacket</string>
    <string name="shorts">Bottoms-shorts</string>
    <string name="jeans">Bottoms-jeans</string>
    <string name="sweatpants">Bottoms-sweatpants</string>
    <string name="dress">Dress</string>
    <string name="skirt">Skirt</string>
    <string name="analyzing_category">Analyzing category</string>
    <string name="please_wait">Please wait while the analysis is completed</string>
    <string name="description">Description</string>
    <string name="description_hint">Describe the condition and details of your item.</string>
    <string name="swap_method">Swap Method</string>
    <string name="in_person_trade">In-person Trade</string>
    <string name="shipping_trade">Shipping Trade</string>
    <string name="add_location">Add Location</string>
    <string name="upload_pictures">Upload pictures first</string>
    <string name="register">Register</string>
    <string name="location">Location</string>
    <string name="round_pin">📍</string>
    <string name="sparkle">✨</string>
    <string name="related_items">Related Items</string>
    <string name="viewing_count">people are viewing this item</string>
    <string name="swap_now">Swap Now</string>
    <string name="choose_item">Choose an Item</string>
    <string name="choose_the_clothes">Choose the clothes\nyou want to swap!</string>
    <string name="decline">Decline</string>
    <string name="next">Next</string>
    <string name="swap_confirm">Swap Confirm</string>
    <string name="swap_confirmed">Swap Confirmed</string>
    <string name="swap_confirmed_message">Hope this item brings you joy\nand creates new happy memories!</string>
    <string name="Home">Home</string>
    <string name="all">All</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="no_reformed_clothes_yet">No reformed clothes yet</string>
    <string name="new_beginning">A new Beginning?</string>
    <string name="not_exchanged">This item wasn\'t exchaned,\nbut it still has a story to tell.</string>
    <string name="donate">Donate</string>
    <string name="upcycle">Upcycle</string>
    <string name="choose_reform_items">Choose what to make\nfrom this item</string>
    <string name="reform_ai">Here\'s a preview of\nwhhat it could become</string>
    <string name="pick_partner">Pick a partner to\nremake this item</string>
    <string name="support">Support women returning to work!</string>
    <string name="done">Done</string>
</resources>