<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BtnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_down" />


        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_search_bar"
            android:backgroundTint="@color/lightgray_bar"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:clickable="true"
                android:src="@drawable/ic_search"
                app:tint="@color/grayblack" />

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/search_item"
                android:inputType="text"
                android:paddingStart="8dp"
                android:textColorHint="@color/lightgray_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recentSearches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:text="@string/recent_searches"
                android:textColor="@color/sub_black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/recentSearchesClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="200dp"
                android:text="@string/clear" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/resentSearchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/categories"
        android:textColor="@color/sub_black"
        android:textSize="18sp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/example" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/tops"
                android:textColor="@color/sub_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/outer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/example" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/outer"
                android:textColor="@color/sub_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/example" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/bottoms"
                android:textColor="@color/sub_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dresses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/example" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/dresses"
                android:textColor="@color/sub_black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/skirts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/example" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/skirts"
                android:textColor="@color/sub_black"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
