<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/BtnClose"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_clear"
            app:tint="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:paddingStart="100dp"
            android:paddingTop="30dp"
            android:text="@string/choose_item"
            android:textColor="@color/sub_black"
            android:textSize="18sp" />


    </LinearLayout>

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/border"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />


    <Button
        android:id="@+id/btn_swap_confirm"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/register_button_blue"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/swap_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>