<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/swap_confirm_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/swap_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="110dp"
        android:layout_marginTop="176dp"/>

    <TextView
        android:id="@+id/swap_confirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swap_confirmed"
        android:fontFamily="@font/pretendard_semibold"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@+id/swap_confirm_img"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="95dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/sub_black"/>

    <TextView
        android:id="@+id/swap_confirmed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swap_confirmed_message"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/swap_confirmed"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/sub_black"/>

    <Button
        android:id="@+id/btn_home"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/Home"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/register_button_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>