<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reform.ReformFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_reform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/title_reform"
            android:textColor="@color/sub_black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/filter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_reform">

            <Button
                android:id="@+id/btnAll"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/reform_filter_button_bg"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/all"
                android:textAllCaps="false"
                android:textColor="@color/reform_filter_text_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnInProgress"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/reform_filter_button_bg"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/in_progress"
                android:textAllCaps="false"
                android:textColor="@color/reform_filter_text_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCompleted"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/reform_filter_button_bg"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/completed"
                android:textAllCaps="false"
                android:textColor="@color/reform_filter_text_color"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reformed_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_button">

            <ImageView
                android:id="@+id/ic_error"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="200dp"
                android:src="@drawable/ic_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/pretendard_medium"
                android:text="@string/no_reformed_clothes_yet"
                android:textColor="@color/no_reformed"
                android:textSize="16sp" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reformSwapRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>