<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp">

    <ImageView
        android:id="@+id/BtnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/process"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/process3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnBack" />

    <LinearLayout
        android:id="@+id/process_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="3"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/process" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="/"
            android:textColor="@color/sub_black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/pretendard_regular"
            android:text="3"
            android:textColor="@color/process_number"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/reform_items_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/pick_partner"
        android:textColor="@color/sub_black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_number" />

    <TextView
        android:id="@+id/reform_items_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/support"
        android:textColor="@color/support_gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reform_items_header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPartners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reform_items_subtitle" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/register_button_blue"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>